Update and rename index.md to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-# Himanshu Mittal's space on the Interwebs
+<h1>Himanshu Mittal's space on the Interwebs</h1>
 
 <ul>
   {% for post in site.posts %}
