--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Himanshu Mittal's space on the Interwebs</title>
+  </head>
+  <body>
+    
 <h1>Himanshu Mittal's space on the Interwebs</h1>
 
 <ul>
@@ -8,3 +14,5 @@
     </li>
   {% endfor %}
 </ul>
+  </body>
+</html>
